--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /* nav bar styles */
 nav {
     background-color: rgb(245, 241, 243);
+    height: 130px;
 }
 
 .nav-logo {
@@ -56,6 +57,7 @@ nav {
     width: 262px;
     height: 56px;
     align-items: center;
+    cursor: pointer;
 
 }
 
@@ -71,28 +73,64 @@ img {
     background-repeat: no-repeat;
     padding: 20px 240px;
     text-align: left;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 200px;
-    font-size: 25px;
+    font-size: 30px;
 }
 
-.sign-btn {
+.sign-btn,
+.know-more
+ {
     border-radius: 48px;
     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-    width: 80px;
+    width: 100px;
     height: 40px;
     font-size: 15px;
     border: none;
     color: aliceblue;
+    cursor: pointer;
+}
+
+.sign-btn:hover{
+    background: plum;
+    color: black;
 }
 
 .rogue-btn {
     border-radius: 48px;
     background: #4EC5F7;
-    width: 90px;
+    width: 100px;
     height: 40px;
     border: none;
     font-size: 15px;
     color: aliceblue;
+}
+
+.rogue-btn:hover {
+    background: pink;
+    color: black;
+    cursor: pointer;
+}
+
+.primary-color {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* main */
+.gamer-container {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    display: flex;
+    text-align: right;
+    align-items: center;
+    padding: 0px 240px;
+}
+.gamer-img{
+   padding: 55px 0px;
+}
+.gamer-title{
+    font-size: 20px;
 }
